Refactoring Resolvers, allowing configuration of multiple cooperating resolvers with unknown different annotations types Also auto set imports for resolvers, and their needed classpaths into the script engine Jar File resolver Maven artifact resolver

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,7 @@ version=0.1-SNAPSHOT
 
 version_kotlin=1.1-M04
 version_junit=4.12
+
+version_jcabi=0.10.1
+version_aether=1.13.1
+version_maven=3.0.3
