rename common to core assert the resetToLine calls that modify more than one history state remove the same lines of code

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile project(':keplin-common')
+    compile project(':keplin-core')
     compile project(':keplin-maven-resolver')
 }
