--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-include 'common', 'maven-resolver', 'spark-repl', 'samples'
+include 'core', 'maven-resolver', 'spark-repl', 'samples'
 
-project(':common').name = 'keplin-common'
+project(':core').name = 'keplin-core'
 project(':maven-resolver').name = 'keplin-maven-resolver'
 project(':samples').name = 'keplin-samples'
 project(':spark-repl').name = 'keplin-spark-repl'
