--- a/maven-resolver/build.gradle
+++ b/maven-resolver/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile project(":keplin-common")
+    compile project(":keplin-core")
     compile group: "com.jcabi", name: "jcabi-aether", version: version_jcabi
     compile group: "org.sonatype.aether", name: "aether-api", version: version_aether
     compile group: "org.apache.maven", name: "maven-core", version: version_maven
