add copy of kotlin-script-util for testing add unit tests to kotlin-script-util for GenericRepl engine

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     compile project(':keplin-script-templates')
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: version_kotlin
 }
