--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ subprojects {
 
     dependencies {
         compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
-        compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
         testCompile group: 'junit', name: 'junit', version: version_junit
+        testCompile  group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: version_kotlin
     }
 }
