--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,10 @@
-include 'core', 'script-templates', 'maven-resolver', 'spark-repl', 'samples'
+include 'core', 'script-templates', 'maven-resolver', 'spark-repl', 'samples', 'kotlin-script-util'
 
 project(':core').name = 'keplin-core'
 project(':script-templates').name = 'keplin-script-templates'
 project(':maven-resolver').name = 'keplin-maven-resolver'
 project(':samples').name = 'keplin-samples'
 project(':spark-repl').name = 'keplin-spark-repl'
+project(':kotlin-script-util').name = 'keplin-kotlin-script-util'
 
 
