work in progress on JSR223 engine, a quick eval-only engine exists with test

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,9 @@
-include 'core', 'script-templates', 'maven-resolver', 'spark-repl', 'samples', 'kotlin-script-util'
+include 'core', 'script-templates', 'maven-resolver', 'jsr223-engine', 'spark-repl', 'samples', 'kotlin-script-util'
 
 project(':core').name = 'keplin-core'
 project(':script-templates').name = 'keplin-script-templates'
 project(':maven-resolver').name = 'keplin-maven-resolver'
+project(':jsr223-engine').name = 'keplin-jsr223-kotlin-engine'
 project(':samples').name = 'keplin-samples'
 project(':spark-repl').name = 'keplin-spark-repl'
 project(':kotlin-script-util').name = 'keplin-kotlin-script-util'
