--- a/jsr223-engine/build.gradle
+++ b/jsr223-engine/build.gradle
@@ -4,5 +4,5 @@ dependencies {
     compile project(':keplin-script-templates')
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
-
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
 }
