--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,6 @@
 group=uy.kohesive.keplin
 version=0.1-SNAPSHOT
-
-version_kotlin=1.1-M04
+version_kotlin=1.1.0-dev-5936
 version_junit=4.12
 
 version_jcabi=0.10.1
