remove copy of kotlin-script-util update build to latest DEV build of Kotlin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 group=uy.kohesive.keplin
-version=0.1-SNAPSHOT
+version=1.0.0-ALPHA-02-SNAPSHOT
+version_gradle=3.2.1
+
 version_kotlin=1.1.0-dev-5936
 version_junit=4.12
 
