catch up to current state vs. Kotlin 1.1-beta-38

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 group=uy.kohesive.keplin
-version=1.0.0-ALPHA-04-SNAPSHOT
+version=1.0.0-ALPHA-38
+
 version_gradle=3.2.1
-version_kotlin=1.1.0-dev-6111
+version_kotlin=1.1.0-beta-38
 version_junit=4.12
 
 version_jcabi=0.10.1
