--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include 'core', 'script-templates', 'maven-resolver', 'jsr223-engine', 'spark-repl', 'samples'
+include 'core', 'maven-resolver', 'jsr223-engine', 'spark-repl', 'samples'
 
 project(':core').name = 'keplin-core'
 project(':script-templates').name = 'keplin-script-templates'
