Update to Kotlin 1.1.x

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 group=uy.kohesive.keplin
-version=1.0.0-ALPHA-41
-
-version_gradle=3.2.1
-version_kotlin=1.1.0-beta-38
+version=1.0.0-BETA-01-SNAPSHOT
+version_gradle=3.3
+version_kotlin=1.1.1
 version_junit=4.12
 
 version_jcabi=0.10.1
