--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ import org.gradle.plugins.ide.idea.model.IdeaProject
 
 buildscript {
     repositories {
-        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
+        // maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
         // only when using Kotlin DEV releases ...
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-dev' }
+        // maven { url 'https://dl.bintray.com/kotlin/kotlin-dev' }
         jcenter()
         mavenCentral()
     }
@@ -28,9 +28,9 @@ subprojects {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
+        // maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
         // only when using Kotlin DEV releases ...
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-dev' }
+        // maven { url 'https://dl.bintray.com/kotlin/kotlin-dev' }
     }
 
     dependencies {
