gradle upgrade, release beta-03

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group=uy.kohesive.keplin
-version=1.0.0-BETA-01-SNAPSHOT
-version_gradle=3.3
+version=1.0.0-BETA-03
+version_gradle=3.4.1
 version_kotlin=1.1.1
 version_junit=4.12
 
