--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: version_kotlin
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
 }
