refactoring to support Elasticsearch-KotlinScript broken build, this is intermediary step.

--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,11 @@ subprojects {
     }
 
     dependencies {
-        compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
-        testCompile group: 'junit', name: 'junit', version: version_junit
-        testCompile  group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: version_kotlin
+        if (name != "elasticsearch-kotlinscript") {
+            compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
+            testCompile group: 'junit', name: 'junit', version: version_junit
+            testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: version_kotlin
+        }
     }
 
     tasks.withType(JavaCompile) {
@@ -61,6 +63,12 @@ subprojects {
 
     task subRelease() {
         dependsOn jars, uploadArchives
+    }
+
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = 1.8
+        }
     }
 
     modifyPom {
