--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=uy.kohesive.keplin
-version=1.0.0-BETA-04
+version=1.0.0-BETA-06
 version_gradle=3.4.1
 version_kotlin=1.1.1
 version_junit=4.12
@@ -7,3 +7,6 @@ version_junit=4.12
 version_jcabi=0.10.1
 version_aether=1.13.1
 version_maven=3.0.3
+version_elasticsearch=5.2.2
+# should match what elasticsearch expects, for testing:
+version_log4j=2.7
