--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,9 @@
-include 'core', 'maven-resolver', 'jsr223-engine'
+include 'util', 'core', 'maven-resolver', 'jsr223-engine', 'elasticsearch-scripting-plugin'
 
+project(':util').name = 'keplin-util'
 project(':core').name = 'keplin-core'
 project(':maven-resolver').name = 'keplin-maven-resolver'
 project(':jsr223-engine').name = 'keplin-jsr223-kotlin-engine'
+project(':elasticsearch-scripting-plugin').name = 'elasticsearch-kotlinscript-plugin'
 
 
