--- a/jsr223-engine/build.gradle
+++ b/jsr223-engine/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    compile project(":keplin-util")
     compile project(':keplin-core')
     compile project(':keplin-maven-resolver')
 
