--- a/elasticsearch-scripting-plugin/build.gradle
+++ b/elasticsearch-scripting-plugin/build.gradle
@@ -12,9 +12,13 @@ println("kepling elasticsearch kotlinscript lib version will be $version")
 
 dependencies {
     compile project(":keplin-util")
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: version_kotlin
+   // compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
+   // compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
+   compile fileTree(dir: 'lib', include: '*.jar')
+    //compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
+    //compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
+
+    //compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: version_kotlin
 
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: version_elasticsearch
 
@@ -30,8 +34,8 @@ dependencies {
 
 configurations.all {
     // these are in the embeddable compiler already, to avoid jarhell check we cannot have two copies
-    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
-    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
+    // exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
+    // exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
     // this is a problem, we need it excluded from Kotlin compiler embeddable so we can use the ES version instead, because this won't work in real life:
-    exclude group: 'net.java.dev.jna', module: 'jna'
+    // exclude group: 'net.java.dev.jna', module: 'jna'
 }
