--- a/util/build.gradle
+++ b/util/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     compileOnly group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
+    compileOnly group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
 }
