--- a/elasticsearch-scripting-plugin/build.gradle
+++ b/elasticsearch-scripting-plugin/build.gradle
@@ -23,13 +23,12 @@ dependencies {
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: version_elasticsearch
 
     // temporarily, we need to just link with submodule to the files and parse them ourselves
-    compile (group: 'org.codelibs.elasticsearch.module', name: 'lang-painless', version: version_elasticsearch) {
-        exclude group: 'org.antlr'
-        //    exclude group: 'org.ow2.asm'
-    }
+    testCompile group: 'org.codelibs.elasticsearch.module', name: 'lang-painless', version: version_elasticsearch
+    testCompile group: 'org.codelibs.elasticsearch.module', name: 'ingest-common', version: version_elasticsearch
+    compileOnly group: 'org.ow2.asm', name: 'asm-debug-all', version: version_elasticsearch_asm
 
     testCompile group: 'org.elasticsearch.test', name: 'framework', version: version_elasticsearch
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: version_log4j
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: version_elasticsearch_log4j
 }
 
 configurations.all {
