--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,6 @@ version_jcabi=0.10.1
 version_aether=1.13.1
 version_maven=3.0.3
 version_elasticsearch=5.2.2
+version_elasticsearch_asm=5.1
 # should match what elasticsearch expects, for testing:
-version_log4j=2.7
+version_elasticsearch_log4j=2.7
