continuing to move things around, they are not yet changed to be their intended behavior, but functionality is getting grouped to the right place.

--- a/cuarentena-painless-parser/build.gradle
+++ b/cuarentena-painless-parser/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    compile project(":cuarentena-policy")
+
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
 
     // We use the definition files from the lang-painless module of elastic
