generate cuarentena policy file from painless to remove dependency from other code cuarentena policy packaging as JAR and loader cuarantena is broken in this build, but is ready to change to new policy format

--- a/cuarentena-painless-parser/build.gradle
+++ b/cuarentena-painless-parser/build.gradle
@@ -3,6 +3,10 @@ dependencies {
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
 
+    compile group: 'org.elasticsearch', name: 'elasticsearch', version: version_elasticsearch
+
+    compile gradleApi()
+
     // We use the definition files from the lang-painless module of elastic
     // search.
     // It is not available directly, but is via the org.codelibs module extraction
