--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ version=1.0.0-BETA-07
 version_gradle=3.4.1
 version_kotlin=1.1.1
 version_junit=4.12
+version_klutter=2.0.4
 
 version_jcabi=0.10.1
 version_aether=1.13.1
