Trying to get kotlin-stdlib verified

--- a/build.gradle
+++ b/build.gradle
@@ -113,26 +113,26 @@ subprojects {
         sign = true
     }
 
-    bintray {
-        user = "$bintrayUser"
-        key = "$bintrayKey"
-        pkg {
-            repo = 'kohesive'
-            name = project.name
-            licenses = ['MIT']
-            vcsUrl = 'scm:git:git@github.com:kohesive/keplin.git'
-
-            version {
-                name = project.version
-                desc = 'n/a'
-                released = new Date()
-            }
-            publicDownloadNumbers = false
-            configurations = ['archives']
-        }
-        publish = true
-        dryRun = false
-    }
+//    bintray {
+//        user = "$bintrayUser"
+//        key = "$bintrayKey"
+//        pkg {
+//            repo = 'kohesive'
+//            name = project.name
+//            licenses = ['MIT']
+//            vcsUrl = 'scm:git:git@github.com:kohesive/keplin.git'
+//
+//            version {
+//                name = project.version
+//                desc = 'n/a'
+//                released = new Date()
+//            }
+//            publicDownloadNumbers = false
+//            configurations = ['archives']
+//        }
+//        publish = true
+//        dryRun = false
+//    }
 }
 
 
