--- a/cuarentena-policy/build.gradle
+++ b/cuarentena-policy/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
 
+    compile project(':keplin-util')
+
     testCompile group: 'junit', name: 'junit', version: version_junit
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: version_kotlin
 }
