Inherited allowances support + bumped painless version

--- a/cuarentena-painless-parser/build.gradle
+++ b/cuarentena-painless-parser/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     // search.
     // It is not available directly, but is via the org.codelibs module extraction
     // TODO: change to a Git submodule for these files
-    compile group: 'org.codelibs.elasticsearch.module', name: 'lang-painless', version: version_elasticsearch
+    compile group: 'org.codelibs.elasticsearch.module', name: 'lang-painless', version: version_painless
 
     testCompile group: 'junit', name: 'junit', version: version_junit
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: version_kotlin
