--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,8 @@ version_zacsiphash=1.0.0
 
 version_reflections=0.9.11
 
-version_elasticsearch=5.2.2
+version_elasticsearch=5.6.2
 version_elasticsearch_asm=5.1
+version_painless=5.6.2
 # should match what elasticsearch expects, for testing:
 version_elasticsearch_log4j=2.7
