--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include 'cuarentena',
         'cuarentena-policy',
         'cuarentena-painless-parser',
         'cuarentena-painless-policy',
+        'cuarentena-painless-plus',
         'cuarentena-kotlin-stdlib',
         'keplin-util',
         'keplin-core',
