More Painless+ definitions Got rid of harcoded definitions Moved kotlin policy generator to cuarentena Bug fixes

--- a/cuarentena/build.gradle
+++ b/cuarentena/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':keplin-util')
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
+    compile group: 'org.reflections', name: 'reflections', version: version_reflections
     compile group: 'com.zackehh', name: 'siphash', version: version_zacsiphash
 
     // ASM is included by too many things at different version levels, it should eventually be shaded/renamed into this JAR
