--- a/cuarentena-painless-parser/build.gradle
+++ b/cuarentena-painless-parser/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     compile project(":cuarentena-policy")
 
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
+    compile group: 'org.jetbrains.kotlin', name: "kotlin-stdlib-$version_kotlin_stdlib_type", version: version_kotlin
 
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: version_elasticsearch
 
