--- a/cuarentena/build.gradle
+++ b/cuarentena/build.gradle
@@ -2,7 +2,7 @@ dependencies {
     compile project(':cuarentena-policy')
     compile project(':cuarentena-painless-policy')
 
-    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
+    compile group: 'org.jetbrains.kotlin', name: "kotlin-stdlib-$version_kotlin_stdlib_type", version: version_kotlin
     compile group: 'com.zackehh', name: 'siphash', version: version_zacsiphash
 
     // ASM is included by too many things at different version levels, it should eventually be shaded/renamed into this JAR
