--- a/elasticsearch-lang-kotlin-plugin/build.gradle
+++ b/elasticsearch-lang-kotlin-plugin/build.gradle
@@ -21,8 +21,9 @@ dependencies {
     compile project(":chillambda")
 
     // special Kotlin temporary builds, avoiding conflicts with ES classpath (JarHell checker)
-    compile fileTree(dir: '../lib', include: 'kotlin-compiler-embeddable-nud-*.jar')
-
+    //compile fileTree(dir: '../lib', include: 'kotlin-compiler-embeddable-nud-*.jar')
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
+    
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: version_elasticsearch
 
     compile group: 'uy.kohesive.klutter', name: 'klutter-conversion', version: version_klutter
@@ -41,6 +42,8 @@ dependencies {
 configurations.all {
     // these are in the embeddable compiler already, to avoid jarhell check we cannot have two copies
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
+    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jre8'
+    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
     // this is a problem, we need it excluded from Kotlin compiler embeddable so we can use the ES version instead, because this won't work in real life:
     // exclude group: 'net.java.dev.jna', module: 'jna'
