--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@ group=uy.kohesive.keplin
 version=1.0.0-BETA-08
 
 version_gradle=3.4.1
-version_kotlin=1.1.1
+version_kotlin=1.1.51
+version_kotlin_stdlib_type=jre8
 version_junit=4.12
-version_klutter=2.0.4
+version_klutter=2.2.0
 
 version_jcabi=0.10.1
 version_aether=1.13.1
 version_maven=3.0.3
 version_zacsiphash=1.0.0
-
-version_elasticsearch=5.2.2
+version_elasticsearch=5.6.2
 version_elasticsearch_asm=5.1
 # should match what elasticsearch expects, for testing:
-version_elasticsearch_log4j=2.7
+version_elasticsearch_log4j=2.9.1
