--- a/keplin-core/build.gradle
+++ b/keplin-core/build.gradle
@@ -2,8 +2,11 @@ dependencies {
     compile project(":keplin-util")
 
     // special Kotlin temporary builds, avoiding conflicts with ES classpath (JarHell checker)
-    compile fileTree(dir: '../lib', include: 'kotlin-compiler-embeddable-nud-*.jar')
-    compile fileTree(dir: '../lib', include: 'kotlin-daemon-client*.jar')
+    //compile fileTree(dir: '../lib', include: 'kotlin-compiler-embeddable-nud-*.jar')
+    //compile fileTree(dir: '../lib', include: 'kotlin-daemon-client*.jar')
+
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
 
     // compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
     // compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
