--- a/elasticsearch-lang-kotlin-plugin/build.gradle
+++ b/elasticsearch-lang-kotlin-plugin/build.gradle
@@ -20,16 +20,20 @@ dependencies {
 
     compile project(":chillambda")
 
-    // special Kotlin temporary builds, avoiding conflicts with ES classpath (JarHell checker)
-    //compile fileTree(dir: '../lib', include: 'kotlin-compiler-embeddable-nud-*.jar')
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
-    
+
+    /*
+    compile(group: 'org.jetbrains.kotlin', name: "kotlin-stdlib-$version_kotlin_stdlib_type", version: version_kotlin) {
+        exclude group: 'org.jetbrains', module: 'annotations'
+    }
+    compile(group: 'org.jetbrains.kotlin', name: "kotlin-reflect", version: version_kotlin) {
+        exclude group: 'org.jetbrains', module: 'annotations'
+    }
+    */
+
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: version_elasticsearch
 
     compile group: 'uy.kohesive.klutter', name: 'klutter-conversion', version: version_klutter
-
-  //  compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: version_kotlin
-  //  compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
 
     // at runtime we use the ones within Elasticsearch
     testCompile group: 'org.codelibs.elasticsearch.module', name: 'ingest-common', version: version_elasticsearch
@@ -45,6 +49,7 @@ configurations.all {
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jre8'
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
+    exclude group: 'org.jetbrains', module: 'annotations'
     // this is a problem, we need it excluded from Kotlin compiler embeddable so we can use the ES version instead, because this won't work in real life:
     // exclude group: 'net.java.dev.jna', module: 'jna'
 }
