--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
-import org.gradle.plugins.ide.idea.model.IdeaModel
-import org.gradle.plugins.ide.idea.model.IdeaProject
+apply from: "$rootDir/project-settings.gradle"
 
 buildscript {
     repositories {
@@ -8,33 +7,18 @@ buildscript {
     }
     dependencies {
         classpath group: 'org.jetbrains.kotlin', name: 'kotlin-gradle-plugin', version: version_kotlin
-        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
     }
 }
 
+apply from: "$rootDir/gradle/sonatype-top.gradle"
+
 subprojects {
-    apply plugin: 'kotlin'
-    apply plugin: 'idea'
-    apply plugin: 'com.bmuschko.nexus'
-    apply plugin: 'com.jfrog.bintray'
-
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-
-    compileKotlin {
-        kotlinOptions {
-            jvmTarget = 1.8
-            languageVersion = 1.1
-        }
-    }
-
-    compileTestKotlin {
-        kotlinOptions {
-            jvmTarget = 1.8
-            languageVersion = 1.1
-        }
-    }
+    apply from: "$rootDir/gradle/kotlin-settings.gradle"
+    apply from: "$rootDir/gradle/idea.gradle"
+    apply from: "$rootDir/gradle/sonatype-subproj.gradle"
+    apply from: "$rootDir/gradle/bintray.gradle"
 
     repositories {
         jcenter()
@@ -42,100 +26,8 @@ subprojects {
     }
 
     dependencies {
-
-    }
-
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
-        options.incremental = true
-        options.compilerArgs << '-Xlint:unchecked'
-    }
-
-    IdeaModel idea = project.idea
-    IdeaProject ideaProject = idea.getProject()
-
-    if (ideaProject != null) {
-        ideaProject.setJdkName(project.targetCompatibility.getName())
-        ideaProject.setLanguageLevel(project.sourceCompatibility.getName())
-        if (ideaProject.hasProperty("vcs")) {
-            ideaProject.setVcs('Git')
-        }
-    }
-
-    idea.module {
-        downloadJavadoc = true
-        downloadSources = true
-    }
-
-    task jars() {
-        dependsOn build
-    }
-
-    task subRelease() {
-        dependsOn jars, uploadArchives
-    }
-
-    modifyPom {
-        //noinspection GroovyAssignabilityCheck
-        project {
-            name 'Keplin for Kotlin'
-            description 'Scripting and REPLs for Kotlin'
-            url 'https://github.com/kohesive/keplin'
-            inceptionYear '2017'
-
-            scm {
-                url 'https://github.com/kohesive/keplin'
-                connection 'scm:https://github.com/kohesive/keplin'
-                developerConnection 'scm:git@github.com:kohesive/keplin.git'
-            }
-
-            licenses {
-                license {
-                    name 'MIT'
-                    url 'https://github.com/kohesive/keplin/blob/master/LICENSE'
-                    distribution 'repo'
-                }
-            }
-
-            developers {
-                developer {
-                    id 'apatrida'
-                    name 'Jayson Minard'
-                    email 'jayson.minard@gmail.com'
-                }
-                developer {
-                    id 'brainoutsource'
-                    name 'Alex Eliseyev'
-                    email 'a.a.eliseyev@gmail.com'
-                }
-            }
-        }
-
-    }
-
-    nexus {
-        sign = true
-    }
-
-    bintray {
-        user = "$bintrayUser"
-        key = "$bintrayKey"
-        pkg {
-            repo = 'kohesive'
-            name = project.name
-            licenses = ['MIT']
-            vcsUrl = 'scm:git:git@github.com:kohesive/keplin.git'
-
-            version {
-                name = project.version
-                desc = 'n/a'
-                released = new Date()
-            }
-            publicDownloadNumbers = false
-            configurations = ['archives']
-        }
-        publish = true
-        dryRun = false
+        testCompile group: 'junit', name: 'junit', version: version_junit
+        testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: version_kotlin
     }
 }
 
@@ -144,13 +36,4 @@ task wrapper(type: Wrapper) {
     gradleVersion = "$version_gradle"
 }
 
-task jars() {
-    dependsOn subprojects.jars
-}
-
-task release() {
-    dependsOn subprojects.subRelease
-}
-
-
-defaultTasks 'clean', 'jars'
+defaultTasks 'clean', 'build', 'check'
