update to Kotlin 1.2.21, fixes related to...

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=uy.kohesive.keplin
-version=1.0.0-BETA-14
-version_gradle=4.3.1
-version_kotlin=1.1.51
+version=1.0.0
+version_gradle=4.5.1
+version_kotlin=1.2.21
 version_kotlin_stdlib_type=jre8
 version_junit=4.12
 
