--- a/keplin-util/build.gradle
+++ b/keplin-util/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
     compile group: 'org.jetbrains.kotlin', name: "kotlin-stdlib-$version_kotlin_stdlib_type", version: version_kotlin
+    // compileOnly group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
 }
