--- a/keplin-core/build.gradle
+++ b/keplin-core/build.gradle
@@ -3,5 +3,5 @@ dependencies {
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: version_kotlin
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
-
+    // testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
 }
