--- a/keplin-jsr223-kotlin-engine/build.gradle
+++ b/keplin-jsr223-kotlin-engine/build.gradle
@@ -4,6 +4,6 @@ dependencies {
     compile project(':keplin-maven-resolver')
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-client', version: version_kotlin
-
+    compile group: 'org.jetbrains.kotlin', name: "kotlin-stdlib-$version_kotlin_stdlib_type", version: version_kotlin
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: version_kotlin
 }
