--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=uy.kohesive.keplin
-version=1.0.1
+version=1.0.2-SNAPSHOT
 version_gradle=4.5.1
 version_kotlin=1.2.21
 version_kotlin_stdlib_type=jdk8
